registro estado inicial

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,9 +106,9 @@ body{
       /* padding-left: 40%; */
       flex-wrap: nowrap;
     }
-    .container{
+    /* .container{
       background-color: #7c5cff;
-    }
+    } */
 
 
 
