--- a/public/css/style.css
+++ b/public/css/style.css
@@ -526,26 +526,26 @@ display: flex;
 background-color: #1e1c38;
 list-style-type: none;
 width: 100%;
-height: 8vh;
+height: 9vh;
 padding: 10px;
-font-size: 1.3rem;
+
 }
 .foot li{
   margin: 0 10px;
 }
 .foot a{
   text-decoration: none;
-  color: #c9c8c8;
-  font-family: monospace;
+  color: #efefef;
+  font-family: 'Lato', sans-serif;
 }
 /* pagina de preguntas frecuentes */
 
 
 .navbarpreg{
-  position: absolute;
+  position: fixed;
   height: 56px;
   width: 100vw;
-  /* background-color:#7d5bb9; */
+  background-color:#7d5bb9;
   float: left;
 
 }
@@ -597,9 +597,9 @@ left: 30%;
   padding: 7px;
   text-decoration: none;
   position: absolute;
-  right: 15px;
-  top: 15px;
-  background-color:#744fe7;
+  right: 30px;
+  top: 10px;
+  background-color:#7d5bb9;
   color: white;
 
   font-family: 'Lato', sans-serif;
@@ -695,6 +695,22 @@ font-family: 'Montserrat', sans-serif;
   left: 10px;
   top: 7px;
   border-radius: 30%;
+}
+.boton-form{
+  text-align: center;
+
+  height: 40px;
+  padding: 7px;
+  text-decoration: none;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  background-color:#744fe7;
+  color: white;
+
+  font-family: 'Lato', sans-serif;
+  font-size: 1rem;
+  border-radius: 5%;
 }
 .nav-forms{
   position: relative;
