--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1457,11 +1457,44 @@ top: 18%;
   z-index: 1;
 
 }
+
 .headerperfil{
   width: 100%;
   height: 60px;
   background-color: white;
   position: relative;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  border-radius: 5px;
+  text-decoration: none;
+}
+.imgbusq{
+  display: inline-block;
+    float: right;
+    /* position: static; */
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    top: 18%;
+    right: 10%;
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.busquedas{
+  text-decoration: none;
+}
+
+.container {
+  overflow: hidden;
+  padding: 2px 16px;
+}
+.titit{
+  display: inline-block;
+  color: black;
 }
 .headerperfil img{
   border-radius: 50%;
