--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2896,8 +2896,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #3490dc;
-  border-color: #3490dc;
+  background-color: #7d5bb9;
+  border-color: #7d5bb9;
 }
 
 .btn-primary:hover {
