--- a/public/css/app.css
+++ b/public/css/app.css
@@ -385,7 +385,7 @@ h6,
 .h5,
 .h6 {
   margin-bottom: 0.5rem;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.2;
 }
 
@@ -2896,8 +2896,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #7d5bb9;
-  border-color: #7d5bb9;
+  background-color: #3490dc;
+  border-color: #3490dc;
 }
 
 .btn-primary:hover {
@@ -11355,3 +11355,4 @@ a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
+
